--- a/app/shared/header/header.view.html
+++ b/app/shared/header/header.view.html
@@ -13,31 +13,9 @@
       <a class="nav-item text-muted" href="#">
         <i class="fab fa-opencart"></i>
       </a>
-      <a class="btn btn-sm btn-outline-secondary" href="#">Sign up</a>
+      <a class="btn btn-sm btn-outline-secondary" href="/index.html?#!/login">Mi Cuenta</a>
     </div>
   </div>
 </header>
 <!-- Modal Subscribe -->
-<div class="modal fade" id="subscribeModal" tabindex="-1" role="dialog" aria-labelledby="subscribeModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="subscribeModalLabel">Suscríbase</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <form>
-          <div class="form-group">
-            <input type="email" class="form-control" id="recipient-name" placeholder="Email">
-          </div>
-        </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-        <button type="button" class="btn btn-primary" data-dismiss="modal">Suscribirme</button>
-      </div>
-    </div>
-  </div>
-</div>
+<div ng-include="'app/components/modals/modal-subscribe.view.html'"></div>
