--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.5/angular-route.min.js"></script>
 
   <script src="app/app.js"></script>
-  <script src="app/components/home/home.controller.js"></script>
+  <script src="app/sections/home/home.controller.js"></script>
+  <script src="app/sections/login/login.controller.js"></script>
+  <script src="app/sections/register/register.controller.js"></script>
   <script src="app/shared/header/header.controller.js"></script>
   <script src="app/app.routes.js"></script>
   <script src="app/app.services.js"></script>
