Categories Ctrl Srv View

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
   <script src="app/sections/login/login.controller.js"></script>
   <script src="app/sections/register/register.controller.js"></script>
   <script src="app/shared/header/header.controller.js"></script>
+  <script src="app/services/categories.service.js"></script>
+  <script src="app/shared/categories/categories.controller.js"></script>
   <script src="app/app.routes.js"></script>
   <script src="app/app.services.js"></script>
   <script src="app/el-baraton.js"></script>
