--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
   <script src="app/shared/header/header.controller.js"></script>
   <script src="app/services/categories.service.js"></script>
   <script src="app/shared/categories/categories.controller.js"></script>
+  <script src="app/services/products.service.js"></script>
+  <script src="app/components/products/products.controller.js"></script>
+  <script src="app/components/hero/hero.controller.js"></script>
   <script src="app/app.routes.js"></script>
   <script src="app/app.services.js"></script>
   <script src="app/el-baraton.js"></script>
