--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   <script src="app/shared/categories/categories.controller.js"></script>
   <script src="app/services/products.service.js"></script>
   <script src="app/components/products/products.controller.js"></script>
+  <script src="app/components/product/product.directive.js"></script>
   <script src="app/components/hero/hero.controller.js"></script>
   <script src="app/app.routes.js"></script>
   <script src="app/app.services.js"></script>
