--- a/app/shared/header/header.view.html
+++ b/app/shared/header/header.view.html
@@ -7,13 +7,23 @@
       <a class="header__logo text-dark" href="#">El Baratón</a>
     </div>
     <div class="nav-user-items col-4 d-flex justify-content-end align-items-center">
-      <a class="nav-item text-muted" href="#">
-        <i class="far fa-heart"></i>
-      </a>
-      <a class="nav-item text-muted" href="#">
-        <i class="fab fa-opencart"></i>
-      </a>
-      <a class="btn btn-sm btn-outline-secondary" href="/index.html?#!/login">Mi Cuenta</a>
+      <div class="text-muted nav-item ml-1">
+        <i class="far fa-heart" id="dropdownMenuFavorites" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuFavorites">
+          <a class="dropdown-item" href="#">Favorite 1</a>
+          <a class="dropdown-item" href="#">Favorite 2</a>
+          <a class="dropdown-item" href="#">Favorite 3</a>
+        </div>
+      </div>
+      <div class="text-muted nav-item ml-1">
+        <i class="fab fa-opencart" id="dropdownMenuCart" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuCart">
+          <a class="dropdown-item" href="#">Cart 1</a>
+          <a class="dropdown-item" href="#">Cart 2</a>
+          <a class="dropdown-item" href="#">Cart 3</a>
+        </div>
+      </div>
+      <a class="nav-item text-muted" href="/index.html?#!/login"><i class="fas fa-user-astronaut"></i></a>
     </div>
   </div>
 </header>
