--- a/app/shared/header/header.view.html
+++ b/app/shared/header/header.view.html
@@ -15,12 +15,11 @@
           <a class="dropdown-item" href="#">Favorite 3</a>
         </div>
       </div>
-      <div class="text-muted nav-item ml-1">
-        <i class="fab fa-opencart" id="dropdownMenuCart" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
+      <div class="text-muted nav-item ml-1" ng-controller="CartController as cartVM">
+        <i ng-click="cartVM.getProductsFromLS()" class="fab fa-opencart" id="dropdownMenuCart" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuCart">
-          <a class="dropdown-item" href="#">Cart 1</a>
-          <a class="dropdown-item" href="#">Cart 2</a>
-          <a class="dropdown-item" href="#">Cart 3</a>
+          <a ng-repeat="product in cartVM.products_cart" class="dropdown-item" href="#">{{product.name}}</a>
+          <div ng-if="!cartVM.products_cart.length" class="dropdown-item">Huy, no hay nada, compra alguito! =)</div>
         </div>
       </div>
       <a class="nav-item text-muted" href="/index.html?#!/login"><i class="fas fa-user-astronaut"></i></a>
