--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.5/angular-route.min.js"></script>
 
   <script src="app/app.js"></script>
+  <script src="app/services/localstorage.service.js"></script>
   <script src="app/sections/home/home.controller.js"></script>
   <script src="app/sections/login/login.controller.js"></script>
   <script src="app/sections/register/register.controller.js"></script>
@@ -30,6 +31,8 @@
   <script src="app/components/products/products.controller.js"></script>
   <script src="app/components/product/product.directive.js"></script>
   <script src="app/components/hero/hero.controller.js"></script>
+  <script src="app/components/cart/cart.controller.js"></script>
+  <script src="app/components/cart/cart.service.js"></script>
   <script src="app/app.routes.js"></script>
   <script src="app/app.services.js"></script>
   <script src="app/el-baraton.js"></script>
