--- a/app/shared/header/header.view.html
+++ b/app/shared/header/header.view.html
@@ -4,15 +4,16 @@
       <a class="text-muted" href="#" class="btn btn-primary" data-toggle="modal" data-target="#subscribeModal">Suscríbase</a>
     </div>
     <div class="col-4 text-center">
-      <a class="header__logo text-dark" href="#">El Baratón</a>
+      <a class="header__logo" href="#">El Baratón</a>
     </div>
     <div class="nav-user-items col-4 d-flex justify-content-end align-items-center">
-      <div class="text-muted nav-item ml-1">
-        <i class="far fa-heart" id="dropdownMenuFavorites" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuFavorites">
-          <a class="dropdown-item" href="#">Favorite 1</a>
-          <a class="dropdown-item" href="#">Favorite 2</a>
-          <a class="dropdown-item" href="#">Favorite 3</a>
+      <div class="text-muted nav-item ml-1" ng-controller="FavoritesController as favoritesVM">
+        <i ng-click="favoritesVM.getProductsFromLS()" class="far fa-heart" id="dropdownMenuFavorites" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
+        <div class="dropdown-menu cart-dropdown-menu" aria-labelledby="dropdownMenuFavorites">
+          <a ng-repeat="product in favoritesVM.products_favorites" class="dropdown-item" href="#">{{product.name}}</a>
+          <div ng-if="!favoritesVM.products_favorites.length" class="dropdown-item">Huy, no hay nada, agrega alguito! <code><3</code> </div>
+          <div class="dropdown-divider" ng-if="favoritesVM.products_favorites.length"></div>
+          <a ng-click="favoritesVM.cleanLocalStorageFavorites()" ng-if="favoritesVM.products_favorites.length" class="dropdown-item text-center text-danger d-flex justify-content-between" href="javascript:void(0)"> Borrar Favoritos <i class="far fa-trash-alt"></i> </a>
         </div>
       </div>
       <div class="text-muted nav-item ml-1" ng-controller="CartController as cartVM">
@@ -21,8 +22,8 @@
           <a ng-repeat="product in cartVM.products_cart" class="dropdown-item" href="#">{{product.name}}</a>
           <div ng-if="!cartVM.products_cart.length" class="dropdown-item">Huy, no hay nada, compra alguito! =)</div>
           <div class="dropdown-divider" ng-if="cartVM.products_cart.length"></div>
-          <a ng-click="cartVM.cleanLocalStorageCart()" ng-if="cartVM.products_cart.length" class="dropdown-item text-center text-danger" href="javascript:void(0)"> Vaciar Canasta </a>
-          <a ng-click="cartVM.goToCartPage()" ng-if="cartVM.products_cart.length" class="dropdown-item text-center text-success" href="javascript:void(0)"> Ir a Pagar </a>
+          <a ng-click="cartVM.cleanLocalStorageCart()" ng-if="cartVM.products_cart.length" class="dropdown-item text-center text-danger d-flex justify-content-between" href="javascript:void(0)"> Vaciar Canasta <i class="far fa-trash-alt"></i> </a>
+          <a ng-click="cartVM.goToCartPage()" ng-if="cartVM.products_cart.length" class="dropdown-item text-center text-success d-flex justify-content-between" href="javascript:void(0)"> Ir a Pagar <i class="fas fa-dollar-sign"></i> </a>
         </div>
       </div>
       <a class="nav-item text-muted" href="/index.html?#!/login"><i class="fas fa-user-astronaut"></i></a>
