--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>El Baratón</title>
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/styles/styles.css">
@@ -33,6 +34,7 @@
   <script src="app/components/hero/hero.controller.js"></script>
   <script src="app/components/cart/cart.controller.js"></script>
   <script src="app/components/cart/cart.service.js"></script>
+  <script src="app/components/favorites/favorites.controller.js"></script>
   <script src="app/app.routes.js"></script>
   <script src="app/app.services.js"></script>
   <script src="app/el-baraton.js"></script>
