--- a/app/shared/header/header.view.html
+++ b/app/shared/header/header.view.html
@@ -1,7 +1,7 @@
 <header class="py-3" ng-controller="HeaderController as headerVM">
   <div class="row flex-nowrap justify-content-between align-items-center">
     <div class="col-4 pt-1">
-      <a class="text-muted" href="#" class="btn btn-primary" data-toggle="modal" data-target="#subscribeModal">Suscríbase</a>
+      <a class="btn btn-outline-primary" href="#"" data-toggle="modal" data-target="#subscribeModal">Suscríbase</a>
     </div>
     <div class="col-4 text-center">
       <a class="header__logo" href="#">El Baratón</a>
@@ -20,7 +20,7 @@
         <i ng-click="cartVM.getProductsFromLS()" class="fab fa-opencart" id="dropdownMenuCart" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
         <div class="dropdown-menu cart-dropdown-menu" aria-labelledby="dropdownMenuCart">
           <a ng-repeat="product in cartVM.products_cart" class="dropdown-item" href="#">{{product.name}}</a>
-          <div ng-if="!cartVM.products_cart.length" class="dropdown-item">Huy, no hay nada, compra alguito! =)</div>
+          <div ng-if="!cartVM.products_cart.length" class="dropdown-item">Huy, no hay nada, compra alguito! <span class="text-success">=)</span></div>
           <div class="dropdown-divider" ng-if="cartVM.products_cart.length"></div>
           <a ng-click="cartVM.cleanLocalStorageCart()" ng-if="cartVM.products_cart.length" class="dropdown-item text-center text-danger d-flex justify-content-between" href="javascript:void(0)"> Vaciar Canasta <i class="far fa-trash-alt"></i> </a>
           <a ng-click="cartVM.goToCartPage()" ng-if="cartVM.products_cart.length" class="dropdown-item text-center text-success d-flex justify-content-between" href="javascript:void(0)"> Ir a Pagar <i class="fas fa-dollar-sign"></i> </a>
