--- a/app/sections/home/home.view.html
+++ b/app/sections/home/home.view.html
@@ -1,6 +1,6 @@
 <div class="container">
-  <div ng-include="'app/shared/header/header.view.html'"></div>
-  <div ng-include="'app/shared/categories/categories.view.html'"></div>
-  <div ng-include="'app/components/hero/hero.view.html'"></div>
-  <div ng-include="'app/components/products-layout/products-layout.view.html'"></div>
+  <div ng-include="'shared/header/header.view.html'"></div>
+  <div ng-include="'shared/categories/categories.view.html'"></div>
+  <div ng-include="'components/hero/hero.view.html'"></div>
+  <div ng-include="'components/products-layout/products-layout.view.html'"></div>
 </div>
