--- a/index.html
+++ b/index.html
@@ -4,36 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>El Baratón</title>
-  <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-  <link rel="stylesheet" href="assets/styles/styles.css">
+  <title>Aquí no es</title>
 </head>
-<body ng-app="elBaratonApp" ng-view>  
-
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.5/angular.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.5/angular-route.min.js"></script>
-
-  <script src="app/app.js"></script>
-  <script src="app/services/localstorage.service.js"></script>
-  <script src="app/sections/home/home.controller.js"></script>
-  <script src="app/sections/login/login.controller.js"></script>
-  <script src="app/sections/register/register.controller.js"></script>
-  <script src="app/shared/header/header.controller.js"></script>
-  <script src="app/services/categories.service.js"></script>
-  <script src="app/shared/categories/categories.controller.js"></script>
-  <script src="app/services/products.service.js"></script>
-  <script src="app/components/products-layout/products.controller.js"></script>
-  <script src="app/components/product/product.directive.js"></script>
-  <script src="app/components/hero/hero.controller.js"></script>
-  <script src="app/components/cart/cart.controller.js"></script>
-  <script src="app/components/favorites/favorites.controller.js"></script>
-  <script src="app/app.routes.js"></script>
+<body>
+  <h1>Aquí no es</h1>
 </body>
 </html>
