--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <script src="app/sections/home/home.controller.js"></script>
   <script src="app/sections/login/login.controller.js"></script>
   <script src="app/sections/register/register.controller.js"></script>
+  <script src="app/sections/shop/shop.controller.js"></script>
   <script src="app/shared/header/header.controller.js"></script>
   <script src="app/services/categories.service.js"></script>
   <script src="app/shared/categories/categories.controller.js"></script>
