Remove individual product from cart: fix

--- a/app/sections/shop/shop.view.html
+++ b/app/sections/shop/shop.view.html
@@ -55,7 +55,7 @@
             <h5 class="mt-0">{{shop_product.name}}</h5>
             {{shop_product.description}}
           </div>
-          <a ng-click="shopVM.removeProductFromLS($event, shop_product)" href="#" class="icon-remove btn btn-danger">
+          <a ng-click="shopVM.removeIndividualProductFromLS($event, shop_product)" href="#" class="icon-remove btn btn-danger">
             <i class="far fa-trash-alt"></i>
           </a>
         </li>
