Thanks Page, Favorites Page layout

--- a/app/sections/shop/shop.view.html
+++ b/app/sections/shop/shop.view.html
@@ -55,7 +55,7 @@
             <h5 class="mt-0">{{shop_product.name}}</h5>
             {{shop_product.description}}
           </div>
-          <a ng-click="shopVM.removeIndividualProductFromLS($event, shop_product)" href="#" class="icon-remove btn btn-danger">
+          <a ng-click="shopVM.removeIndividualProductFromLS($event, shop_product)" href="javascript:void(0)" class="icon-remove btn btn-danger">
             <i class="far fa-trash-alt"></i>
           </a>
         </li>
@@ -66,9 +66,9 @@
   <footer class="my-5 pt-5 text-muted text-center text-small">
     <p class="mb-1">© 2017-2018 El Baratón</p>
     <ul class="list-inline">
-      <li class="list-inline-item"><a href="#">Privacy</a></li>
-      <li class="list-inline-item"><a href="#">Terms</a></li>
-      <li class="list-inline-item"><a href="#">Support</a></li>
+      <li class="list-inline-item"><a href="javascript:void(0)">Privacy</a></li>
+      <li class="list-inline-item"><a href="javascript:void(0)">Terms</a></li>
+      <li class="list-inline-item"><a href="javascript:void(0)">Support</a></li>
     </ul>
   </footer>
 </div>
