Header logo, path to home

--- a/app/shared/header/header.view.html
+++ b/app/shared/header/header.view.html
@@ -4,7 +4,7 @@
       <a class="btn btn-outline-primary" href="javascript:void(0)" data-toggle="modal" data-target="#subscribeModal">Suscríbase</a>
     </div>
     <div class="col-4 text-center">
-      <a class="header__logo" href="javascript:void(0)">El Baratón</a>
+      <a class="header__logo" ng-click="headerVM.goToPage('/')" href="javascript:void(0)">El Baratón</a>
     </div>
     <div class="nav-user-items col-4 d-flex justify-content-end align-items-center">
       <div class="text-muted nav-item ml-1" ng-controller="FavoritesController as favoritesVM">
