Favorites Menu: fix name of controller

--- a/app/shared/header/header.view.html
+++ b/app/shared/header/header.view.html
@@ -7,13 +7,13 @@
       <a class="header__logo" ng-click="headerVM.goToPage('/')" href="javascript:void(0)">El Baratón</a>
     </div>
     <div class="nav-user-items col-4 d-flex justify-content-end align-items-center">
-      <div class="text-muted nav-item ml-1" ng-controller="FavoritesController as favoritesVM">
-        <i ng-click="favoritesVM.getProductsFromLS()" class="far fa-heart" id="dropdownMenuFavorites" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
+      <div class="text-muted nav-item ml-1" ng-controller="FavoritesMenuController as favoritesMenuVM">
+        <i ng-click="favoritesMenuVM.getProductsFromLS()" class="far fa-heart" id="dropdownMenuFavorites" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
         <div class="dropdown-menu cart-dropdown-menu" aria-labelledby="dropdownMenuFavorites">
-          <a ng-repeat="product in favoritesVM.products_favorites" class="dropdown-item" href="javascript:void(0)">{{product.name}}</a>
-          <div ng-if="!favoritesVM.products_favorites.length" class="dropdown-item">Huy, no hay nada, agrega alguito! <code><3</code> </div>
-          <div class="dropdown-divider" ng-if="favoritesVM.products_favorites.length"></div>
-          <a ng-click="favoritesVM.cleanLocalStorageFavorites()" ng-if="favoritesVM.products_favorites.length" class="dropdown-item text-center text-danger d-flex justify-content-between" href="javascript:void(0)"> Borrar Favoritos <i class="far fa-trash-alt"></i> </a>
+          <a ng-repeat="product in favoritesMenuVM.products_favorites" class="dropdown-item" href="javascript:void(0)">{{product.name}}</a>
+          <div ng-if="!favoritesMenuVM.products_favorites.length" class="dropdown-item">Huy, no hay nada, agrega alguito! <code><3</code> </div>
+          <div class="dropdown-divider" ng-if="favoritesMenuVM.products_favorites.length"></div>
+          <a ng-click="favoritesMenuVM.cleanLocalStorageFavorites()" ng-if="favoritesMenuVM.products_favorites.length" class="dropdown-item text-center text-danger d-flex justify-content-between" href="javascript:void(0)"> Borrar Favoritos <i class="far fa-trash-alt"></i> </a>
         </div>
       </div>
       <div class="text-muted nav-item ml-1" ng-controller="CartController as cartVM">
