--- a/app/sections/shop/shop.view.html
+++ b/app/sections/shop/shop.view.html
@@ -3,7 +3,7 @@
   <div class="py-5 text-center">
     <h2>El Baratón</h2>
     <div class="col-md-6 offset-md-3">
-      <p class="lead">Ya no tienes que salir de tu casa u oficina para disfrutar lo mejor de tu ciudad. Te llevamos cualquier cosa en minutos. El Baratón llegó para cambiarte la vida..</p>
+      <p class="lead">Ya no tienes que salir de tu casa u oficina para disfrutar lo mejor de tu ciudad. Te llevamos cualquier cosa en minutos. El Baratón llegó para cambiarte la vida.</p>
     </div>
   </div>
 
@@ -14,7 +14,7 @@
         <span class="badge badge-secondary badge-pill">{{shopVM.products_cart.length}}</span>
       </h4>
       <ul class="list-group mb-3">
-        <li ng-repeat="shop_product in shopVM.products_cart" class="list-group-item d-flex justify-content-between lh-condensed">
+        <li ng-repeat="shop_product in shopVM.products_cart | fromMap" class="list-group-item d-flex justify-content-between lh-condensed">
           <div>
             <h6 class="my-0">{{shop_product.name}}</h6>
             <small class="text-muted">{{shop_product.description}}</small>
@@ -48,8 +48,9 @@
     </div>
     <div class="col-md-8 order-md-1">
       <h4 class="mb-3">Productos</h4>
+      <p ng-if="!shopVM.products_cart.size" class="text-center">No hay productos en tu canasta de compra. <a ng-click="shopVM.goToPage('/')" href="javascript:void(0)">Volver a la Tienda</a></p>
       <ul class="list-group">
-        <li class="list-group-item product-in-shop media mb-2" ng-repeat="shop_product in shopVM.products_cart">
+        <li ng-repeat="shop_product in shopVM.products_cart | fromMap" class="list-group-item product-in-shop media mb-2">
           <img class="mr-3" src="https://images.rappi.com.ar/products/{{shop_product.img}}" alt="Generic placeholder image">
           <div class="media-body">
             <h5 class="mt-0">{{shop_product.name}}</h5>
