--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.5/angular-route.min.js"></script>
 
   <script src="app/app.js"></script>
+  <script src="app/app.filters.js"></script>
   <script src="app/services/localstorage.service.js"></script>
   <script src="app/sections/home/home.controller.js"></script>
   <script src="app/sections/login/login.controller.js"></script>
