--- a/app/sections/favorites/favorites.view.html
+++ b/app/sections/favorites/favorites.view.html
@@ -3,15 +3,16 @@
   <section class="jumbotron text-center bg-white">
   <div class="my-3 p-3 bg-white rounded shadow-sm">
     <h6 class="border-bottom border-gray pb-2 mb-0 text-left">Productos Favoritos</h6>
-    <div class="media text-muted pt-3">
-      <img data-src="holder.js/32x32?theme=thumb&amp;bg=007bff&amp;fg=007bff&amp;size=1" alt="32x32" class="mr-2 rounded" style="width: 32px; height: 32px;" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%2232%22%20height%3D%2232%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2032%2032%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_16771b56454%20text%20%7B%20fill%3A%23007bff%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A2pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_16771b56454%22%3E%3Crect%20width%3D%2232%22%20height%3D%2232%22%20fill%3D%22%23007bff%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2212.3046875%22%20y%3D%2216.9%22%3E32x32%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true">
+    <p ng-if="!favoritesVM.products_favorites.size" class="text-center mt-4">No hay productos en tu canasta de compra. <a ng-click="favoritesVM.goToPage('/')" href="javascript:void(0)">Volver a la Tienda</a></p>
+    <div ng-repeat="favorite_product in favoritesVM.products_favorites | fromMap" class="media text-muted pt-3 text-left">
+      <img data-src="https://images.rappi.com.ar/products/{{favorite_product.img}}" alt="32x32" class="mr-2 rounded" style="width: 32px; height: 32px;" src="https://images.rappi.com.ar/favorite_products/{{product.img}}" data-holder-rendered="true">
       <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
-        <strong class="d-block text-gray-dark">@username</strong>
-        Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
+        <strong class="d-block text-gray-dark">{{favorite_product.name}}</strong>
+        {{favorite_product.description}}
       </p>
     </div>
     <small class="d-block text-right mt-3">
-      <a href="#">Todos los Favorites</a>
+      <a ng-if="favoritesVM.products_favorites.size" href="javascript:void(0)">Todos los Favoritos</a>
     </small>
   </div>
   </section>
