--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/styles/styles.css">
 </head>
-<body ng-app="elBaratonApp" ng-view>  
+<body ng-app="elBaratonApp">  
+
+  <div ng-include="'app/shared/header/header.view.html'"></div>
+  <div class="container" ng-view></div>
+  <div ng-include="'app/shared/footer/footer.view.html'"></div>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
@@ -38,6 +42,7 @@
   <script src="app/components/cart/cart.controller.js"></script>
   <script src="app/sections/favorites/favorites.controller.js"></script>
   <script src="app/components/favorites-menu/favorites-menu.controller.js"></script>
+  <script src="app/sections/category-products/category-products.controller.js"></script>
   <script src="app/app.routes.js"></script>
 </body>
 </html>
