--- a/app/shared/header/header.view.html
+++ b/app/shared/header/header.view.html
@@ -1,35 +1,37 @@
 <header class="py-3" ng-controller="HeaderController as headerVM">
-  <div class="row flex-nowrap justify-content-between align-items-center">
-    <div class="col-4 pt-1">
-      <a class="btn btn-outline-primary" href="javascript:void(0)" data-toggle="modal" data-target="#subscribeModal">Suscríbase</a>
-    </div>
-    <div class="col-4 text-center">
-      <a class="header__logo" ng-click="headerVM.goToPage('/')" href="javascript:void(0)">El Baratón</a>
-    </div>
-    <div class="nav-user-items col-4 d-flex justify-content-end align-items-center">
-      <div class="text-muted nav-item ml-1" ng-controller="FavoritesMenuController as favoritesMenuVM">
-        <i ng-click="favoritesMenuVM.getProductsFromLS()" class="far fa-heart" id="dropdownMenuFavorites" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
-        <div class="dropdown-menu cart-dropdown-menu" aria-labelledby="dropdownMenuFavorites">
-          <a ng-repeat="product in favoritesMenuVM.products_favorites | fromMap" class="dropdown-item d-flex justify-content-between" href="javascript:void(0)">
-            {{product.name}}
-            <span class="text-success ml-2"><i class="fas fa-shopping-basket"></i></span>
-          </a>
-          <div ng-if="!favoritesMenuVM.products_favorites.size" class="dropdown-item">Huy, no hay nada, agrega alguito! <code><3</code> </div>
-          <div class="dropdown-divider" ng-if="favoritesMenuVM.products_favorites.size"></div>
-          <a ng-click="favoritesMenuVM.cleanLocalStorageFavorites()" ng-if="favoritesMenuVM.products_favorites.size" class="dropdown-item text-center text-danger d-flex justify-content-between" href="javascript:void(0)"> Borrar Favoritos <i class="far fa-trash-alt"></i> </a>
-        </div>
+  <div class="container">
+    <div class="row flex-nowrap justify-content-between align-items-center">
+      <div class="col-4 pt-1">
+        <a class="btn btn-outline-primary" href="javascript:void(0)" data-toggle="modal" data-target="#subscribeModal">Suscríbase</a>
       </div>
-      <div class="text-muted nav-item ml-1" ng-controller="CartController as cartVM">
-        <i ng-click="cartVM.getProductsFromLS()" class="fab fa-opencart" id="dropdownMenuCart" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
-        <div class="dropdown-menu cart-dropdown-menu" aria-labelledby="dropdownMenuCart">
-          <a ng-repeat="(key, product) in cartVM.products_cart | fromMap" class="dropdown-item" href="javascript:void(0)">{{product.name}}</a>
-          <div ng-if="!cartVM.products_cart.size" class="dropdown-item">Huy, no hay nada, compra alguito! <span class="text-success">=)</span></div>
-          <div class="dropdown-divider" ng-if="cartVM.products_cart.size"></div>
-          <a ng-click="cartVM.cleanLocalStorageCart()" ng-if="cartVM.products_cart.size" class="dropdown-item text-center text-danger d-flex justify-content-between" href="javascript:void(0)"> Vaciar Canasta <i class="far fa-trash-alt"></i> </a>
-          <a ng-click="cartVM.goToCartPage()" ng-if="cartVM.products_cart.size" class="dropdown-item text-center text-success d-flex justify-content-between" href="javascript:void(0)"> Ir a Pagar <i class="fas fa-dollar-sign"></i> </a>
-        </div>
+      <div class="col-4 text-center">
+        <a class="header__logo" ng-click="headerVM.goToPage('/')" href="javascript:void(0)">El Baratón</a>
       </div>
-      <a class="nav-item text-muted" href="/index.html?#!/login"><i class="fas fa-user-astronaut"></i></a>
+      <div class="nav-user-items col-4 d-flex justify-content-end align-items-center">
+        <div class="text-muted nav-item ml-1" ng-controller="FavoritesMenuController as favoritesMenuVM">
+          <i ng-click="favoritesMenuVM.getProductsFromLS()" class="far fa-heart" id="dropdownMenuFavorites" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
+          <div class="dropdown-menu cart-dropdown-menu" aria-labelledby="dropdownMenuFavorites">
+            <a ng-repeat="product in favoritesMenuVM.products_favorites | fromMap" class="dropdown-item d-flex justify-content-between" href="javascript:void(0)">
+              {{product.name}}
+              <span class="text-success ml-2"><i class="fas fa-shopping-basket"></i></span>
+            </a>
+            <div ng-if="!favoritesMenuVM.products_favorites.size" class="dropdown-item">Huy, no hay nada, agrega alguito! <code><3</code> </div>
+            <div class="dropdown-divider" ng-if="favoritesMenuVM.products_favorites.size"></div>
+            <a ng-click="favoritesMenuVM.cleanLocalStorageFavorites()" ng-if="favoritesMenuVM.products_favorites.size" class="dropdown-item text-center text-danger d-flex justify-content-between" href="javascript:void(0)"> Borrar Favoritos <i class="far fa-trash-alt"></i> </a>
+          </div>
+        </div>
+        <div class="text-muted nav-item ml-1" ng-controller="CartController as cartVM">
+          <i ng-click="cartVM.getProductsFromLS()" class="fab fa-opencart" id="dropdownMenuCart" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
+          <div class="dropdown-menu cart-dropdown-menu" aria-labelledby="dropdownMenuCart">
+            <a ng-repeat="(key, product) in cartVM.products_cart | fromMap" class="dropdown-item" href="javascript:void(0)">{{product.name}}</a>
+            <div ng-if="!cartVM.products_cart.size" class="dropdown-item">Huy, no hay nada, compra alguito! <span class="text-success">=)</span></div>
+            <div class="dropdown-divider" ng-if="cartVM.products_cart.size"></div>
+            <a ng-click="cartVM.cleanLocalStorageCart()" ng-if="cartVM.products_cart.size" class="dropdown-item text-center text-danger d-flex justify-content-between" href="javascript:void(0)"> Vaciar Canasta <i class="far fa-trash-alt"></i> </a>
+            <a ng-click="cartVM.goToCartPage()" ng-if="cartVM.products_cart.size" class="dropdown-item text-center text-success d-flex justify-content-between" href="javascript:void(0)"> Ir a Pagar <i class="fas fa-dollar-sign"></i> </a>
+          </div>
+        </div>
+        <a class="nav-item text-muted" href="/index.html?#!/login"><i class="fas fa-user-astronaut"></i></a>
+      </div>
     </div>
   </div>
 </header>
