Categories Nav: Fix .url

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body ng-app="elBaratonApp">  
 
   <div ng-include="'app/shared/header/header.view.html'"></div>
+  <div ng-include="'app/shared/categories/categories.view.html'"></div>
   <div class="container" ng-view></div>
   <div ng-include="'app/shared/footer/footer.view.html'"></div>
 
