--- a/app/sections/category-products/category-products.view.html
+++ b/app/sections/category-products/category-products.view.html
@@ -1,6 +1,42 @@
 <div class="container">
-  
-  <ul>
-    <li ng-repeat="category_product in categoryProductsVM.list_of_categorie_products | fromMap">{{category_product.name}}</li>
-  </ul>
+  <div class="input-group mb-3">
+    <div class="input-group-prepend">
+      <span class="input-group-text" id="basic-addon1"><i class="fab fa-superpowers"></i></span>
+    </div>
+    <input ng-model="productsVM.search_box" type="search" class="form-control" placeholder="{{productsVM.only_availables == true ? 'Buscar unicamente en productos disponibles' : 'Buscar en todos los productos'}}" aria-label="Buscar Producto">
+    <div class="input-group-append">
+      <button ng-click="productsVM.cleanSearchBox()" class="btn btn-danger" ng-disabled="!productsVM.search_box.length"><i class="far fa-times-circle"></i></button>
+    </div>
+    <div class="input-group-append">
+      <button ng-click="productsVM.showOnlyAvailableProducts()" ng-class="{'btn-success': (productsVM.only_availables == true)}" class="btn btn-primary">
+        <i class="far fa-hand-point-up"></i>
+        <span ng-if="productsVM.only_availables == false">Ver disponibles</span>
+        <span ng-if="productsVM.only_availables == true">Ver destacados</span>
+      </button>
+    </div>
+  </div>
+  <div class="row">
+    <div ng-repeat="category_product in categoryProductsVM.list_of_categorie_products | fromMap" class="product col-md-6 col-lg-4">
+      <div class="product card flex-md-row mb-4 shadow-sm h-md-250" id="{{category_product.id}}">
+        <span ng-click="productsVM.addToFavorites(product)" ng-class="{'is-favorite': productsVM.isFavorite(product)}" class="product-favorite btn btn-link"><i class="far fa-heart"></i></span>
+        <div class="card-body d-flex flex-column align-items-start">
+          <strong class="d-inline-block mb-2 text-primary">${{category_product.price}}</strong>
+          <h3 class="product__title mb-0">
+            <a class="text-dark" href="javascript:void(0);">{{category_product.name}}</a>
+          </h3>
+          <div class="mb-1 text-muted">Disponibilidad: {{category_product.quantity}}</div>
+          <p class="card-text mb-auto">{{category_product.description}}.</p>
+        </div>
+        <figure class="product__figure">
+          <img class="card-img-right flex-auto d-none d-lg-block" data-src="https://images.rappi.com.ar/products/{{category_product.img}}" alt="{{category_product.name}}" src="https://images.rappi.com.ar/products/{{category_product.img}}" data-holder-rendered="true" style="width: 200px; max-height: 200px;">
+        </figure>
+        <div class="product-options bg-success" ng-class="{'bg-danger': productsVM.productIsInCart(product)}">
+          <button ng-click="productsVM.addToCart(product)" ng-class="{'btn-danger': productsVM.productIsInCart(product)}" class="product-options__option--buy btn btn-success">
+              <span ng-if="!productsVM.productIsInCart(product)">Agregar a la Compra</span>
+              <span ng-if="productsVM.productIsInCart(product)">Agregado</span>
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
