Internal page filters layout

--- a/app/sections/category-products/category-products.view.html
+++ b/app/sections/category-products/category-products.view.html
@@ -1,18 +1,50 @@
 <div class="container">
-  <div class="input-group mb-3">
-    <div class="input-group-prepend">
-      <span class="input-group-text" id="basic-addon1"><i class="fab fa-superpowers"></i></span>
+  <div class="row">
+    <div class="css-order-by col-md-6 d-flex justify-content-start align-items-center mb-3">
+      <span class="mr-2">Ordenar por:</span>
+      <button class="btn btn-outline-primary mr-2" ng-click="productsVM.orderProductsBy('available')" ng-class="{'btn-outline-success': (productsVM.order_by == 'available')}">Disponibilidad</button>
+      <button class="btn btn-outline-primary mr-2" ng-click="productsVM.orderProductsBy('quantity')" ng-class="{'btn-outline-success': (productsVM.order_by == 'quantity')}">Cantidad</button>
+      <button class="btn btn-outline-primary mr-2" ng-click="productsVM.orderProductsBy('price')" ng-class="{'btn-outline-success': (productsVM.order_by == 'price')}">Precio</button>
     </div>
-    <input ng-model="productsVM.search_box" type="search" class="form-control" placeholder="{{productsVM.only_availables == true ? 'Buscar unicamente en productos disponibles' : 'Buscar en todos los productos'}}" aria-label="Buscar Producto">
-    <div class="input-group-append">
-      <button ng-click="productsVM.cleanSearchBox()" class="btn btn-danger" ng-disabled="!productsVM.search_box.length"><i class="far fa-times-circle"></i></button>
+    <div class="col-md-6 d-flex justify-content-end align-items-center mb-3">
+      <span class="mr-2">Filtrar: </span>
+      <button class="btn btn-outline-primary mr-2" ng-click="productsVM.showOnlyAvailableProducts()" ng-class="{'btn-outline-success': (productsVM.only_availables == true)}">Solo disponibles</button>
+      <div class="input-group mr-2">
+        <div class="input-group-prepend">
+          <span class="input-group-text bg-primary text-white">
+            <i class="fas fa-arrow-up"></i>
+          </span> 
+        </div>
+        <input ng-model="productsVM.filter_by_quantity_input" type="number" class="filter-input--txt form-control" placeholder="Cantidad:">
+      </div>
+      <div class="input-group">
+        <div class="input-group-prepend">
+          <span class="input-group-text bg-success text-white"><i class="fas fa-dollar-sign"></i></span>
+        </div>
+        <input ng-model="productsVM.filter_between_price_input_min" type="number" class="filter-input--txt form-control" placeholder="Min">
+        <input ng-model="productsVM.filter_between_price_input_max" type="number" class="filter-input--txt form-control" placeholder="Max">
+      </div>
+      <button ng-click="productsVM.clearFilters()" class="btn btn-outline-danger ml-2" type="button">
+        <i class="far fa-times-circle"></i>
+      </button> 
     </div>
-    <div class="input-group-append">
-      <button ng-click="productsVM.showOnlyAvailableProducts()" ng-class="{'btn-success': (productsVM.only_availables == true)}" class="btn btn-primary">
-        <i class="far fa-hand-point-up"></i>
-        <span ng-if="productsVM.only_availables == false">Ver disponibles</span>
-        <span ng-if="productsVM.only_availables == true">Ver destacados</span>
-      </button>
+    <div class="col-md-12 text-center">
+      <div class="input-group mb-3">
+        <div class="input-group-prepend">
+          <span class="input-group-text" id="basic-addon1"><i class="fab fa-superpowers"></i></span>
+        </div>
+        <input ng-model="productsVM.search_box" type="search" class="form-control" placeholder="{{productsVM.only_availables == true ? 'Buscar unicamente en productos disponibles' : 'Buscar en todos los productos'}}" aria-label="Buscar Producto">
+        <div class="input-group-append">
+          <button ng-click="productsVM.cleanSearchBox()" class="btn btn-danger" ng-disabled="!productsVM.search_box.length"><i class="far fa-times-circle"></i></button>
+        </div>
+        <div class="input-group-append">
+          <button ng-click="productsVM.showOnlyAvailableProducts()" ng-class="{'btn-success': (productsVM.only_availables == true)}" class="btn btn-primary">
+            <i class="far fa-hand-point-up"></i>
+            <span ng-if="productsVM.only_availables == false">Ver disponibles</span>
+            <span ng-if="productsVM.only_availables == true">Ver destacados</span>
+          </button>
+        </div>
+      </div>
     </div>
   </div>
   <div class="row">
